[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Police.gd" type="Script" id=1]
[ext_resource path="res://assets/IsoTruck/carRed6_007.png" type="Texture" id=2]
[ext_resource path="res://assets/IsoTruck/carRed6_011.png" type="Texture" id=3]
[ext_resource path="res://assets/IsoTruck/carRed6_002.png" type="Texture" id=4]
[ext_resource path="res://assets/IsoTruck/carRed6_005.png" type="Texture" id=5]
[ext_resource path="res://assets/IsoTruck/carRed6_001.png" type="Texture" id=6]
[ext_resource path="res://assets/IsoTruck/carRed6_008.png" type="Texture" id=7]
[ext_resource path="res://assets/IsoTruck/carRed6_000.png" type="Texture" id=8]
[ext_resource path="res://assets/IsoTruck/carRed6_006.png" type="Texture" id=9]
[ext_resource path="res://assets/Cars/siren8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sounds/engine-loop-1.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sounds/Item2A.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "e",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "n",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "ne",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "nw",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "s",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "se",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "sw",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "w",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Shader" id=7]
code = "/* -----------------
Simple Police Siren Shader 2D
Creates alternating red and blue light effect
MIT License
----------------- */

shader_type canvas_item;
render_mode unshaded;

uniform float speed : hint_range(0.1, 5.0) = 2.0;
uniform float intensity : hint_range(0.0, 1.0) = 0.7;
uniform vec4 red_color : hint_color = vec4(1.0, 0.0, 0.0, 1.0);
uniform vec4 blue_color : hint_color = vec4(0.0, 0.0, 1.0, 1.0);

void fragment() {
    // Get the original texture color including alpha
    vec4 base_color = texture(TEXTURE, UV);
    
    // Create oscillating value between 0 and 1
    float pulse = abs(sin(TIME * speed));
    
    // Blend between red and blue based on pulse
    vec4 siren_color = mix(red_color, blue_color, pulse);
    
    // Apply intensity and maintain original texture's alpha
    COLOR = mix(base_color, vec4(siren_color.rgb, base_color.a), intensity * base_color.a);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 7 )
shader_param/speed = 2.0
shader_param/intensity = 0.7
shader_param/red_color = Color( 1, 0, 0, 1 )
shader_param/blue_color = Color( 0, 0, 1, 1 )

[node name="PoliceCar" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.168627, 0.313726, 1, 1 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 3 )
animation = "e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="TrailEffect" type="CPUParticles2D" parent="."]
visible = false
rotation = -1.57079
amount = 1
lifetime = 0.01
one_shot = true

[node name="XRayEffect" type="CPUParticles2D" parent="."]
visible = false
emitting = false
amount = 1
lifetime = 0.01
one_shot = true

[node name="SpecialTimer" type="Timer" parent="."]

[node name="SpecialSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="BoostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="SirenLight" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 1, -10 )
texture = ExtResource( 10 )
region_filter_clip = true

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
